--- a/src/sass/components/Projects.scss
+++ b/src/sass/components/Projects.scss
@@ -2,6 +2,7 @@
 
 #Projects {
     height: 600px;
+    padding: 48px 0;
     background-color: $black;
     justify-content: space-around;
     h1 {
@@ -14,7 +15,7 @@
         color: $red-logo;
         display: block;
         text-align: center;
-        padding: 32px 0;
+        padding: 24px 48px 90px;
         margin: 0;
     }
     .__cards {
