--- a/src/sass/components/Home.scss
+++ b/src/sass/components/Home.scss
@@ -51,6 +51,7 @@
             .__buttons {
                 margin-top: 70px;
                 a {
+                    cursor: pointer;
                     text-decoration: none;
                     padding: 8px 16px;
                     font-weight: 500;
