--- a/src/sass/components/Projects.scss
+++ b/src/sass/components/Projects.scss
@@ -4,6 +4,8 @@
     height: 600px;
     padding: 48px 0;
     background-color: $black;
+    // border-top: 1px solid $red-logo;
+    border-bottom: 1px solid $red-logo;
     justify-content: space-around;
     h1 {
         font-family: roboto;
