--- a/src/sass/components/Contact.scss
+++ b/src/sass/components/Contact.scss
@@ -79,6 +79,8 @@
                     display: flex;
                     flex-direction: column;
                     input {
+                        color: $silver;
+                        // color: hsl(0, 0%, 60%);
                         background-color: black;
                         width: 430px;
                         margin-bottom: 20px;
@@ -101,6 +103,8 @@
                 }
                 textarea {
                     background-color: black;
+                    color: $silver;
+                    // color: hsl(0, 0%, 60%);
                     border: 1px solid $silver;
                     padding: 0;
                     border-radius: 20px;
