--- a/src/sass/helpers/variables.scss
+++ b/src/sass/helpers/variables.scss
@@ -39,6 +39,9 @@ $slider-height: 150px;
 
 // Header's height
 $header-height: 130px;
+// $header-flag-height: 28px;
+// $header-flag-height-2: 20px;
+
 // "Projects" section's variables
 
 // Home 
@@ -56,4 +59,4 @@ $threshold3: 992px;
 $threshold4: 1200px;
 $threshold5: 1400px;
 
-// *{border: 1px solid red}
+*{border: 1px solid red} 
