--- a/src/sass/components/Header.scss
+++ b/src/sass/components/Header.scss
@@ -30,17 +30,16 @@
         display: inline-block;
         padding: 9px;
     }
-    // Menu btn
-    .Header__icons-menu {
-        display: none;
-    }
     // Language flags
     .Header__icons {
         display: flex;
-        // justify-content: 
         width: 60px;
-        // padding-right: 10px; 
-        .Header__icons-flag {
+        // Menu btn
+        .Header__icons__menu {
+            display: none;
+        }
+        // Flag
+        .Header__icons__flag {
             // $height: $header-flag-height;
             $height: 28px;
             height: $height;
@@ -56,11 +55,6 @@
         justify-content: space-between;
         box-sizing: border-box;
         padding: 20px;
-        .Header__icons-menu {
-            display: inline-block;
-            cursor: pointer;
-            height: 28px;
-        }
         .Header__menu {
             position: absolute;
             top: 115px;
@@ -92,6 +86,54 @@
             width: 90px;
             justify-content: space-between;
             padding-right: 10px;
+            .Header__icons__menu {
+                position: relative;
+                height: 40px;
+                width: 40px;
+                border: 1px solid red;
+                cursor: pointer;
+                display: flex;
+                justify-content: center;
+                align-items: center; 
+                overflow: hidden;   
+                // Animated lines
+                span {
+                    position: absolute;
+                    width: 30px;
+                    height: 4px;
+                    background-color: $red-logo;
+                    border-radius: 2px;
+                    transition: 0.5s;
+                    &:nth-child(1) {
+                        transform: translateY(-10px);
+                        width: 20px;
+                        right: 5px;
+                    }
+                    &:nth-child(3) {
+                        transform: translateY(10px);
+                        width: 10px;
+                        right: 5px;
+                    }
+                }
+            }
+            .Header__icons__menu-active {
+                span {
+                    &:nth-child(1) {
+                        // transform: translateY(-10px);
+                        width: 30px;
+                        transform: translateY(0px) rotate(-45deg);
+                        // right: 5px;
+                    }
+                    &:nth-child(2) {
+                        transform: translateX(60px);
+                    }
+                    &:nth-child(3) {
+                        width: 30px;
+                        transform: translateY(0px) rotate(-315deg);
+                    }
+                }
+                
+            }   
         }
     }
 }
@@ -111,11 +153,11 @@
         .Header__icons {
             padding: 0;
             $height: 20px;
-            .Header__icons-flag {
+            .Header__icons__flag {
                 height: $height;
                 width: calc($height * 8 / 5);
             }
-            .Header__icons-menu {
+            .Header__icons__menu {
                 height: $height;
                 
             }
