--- a/src/sass/components/About.scss
+++ b/src/sass/components/About.scss
@@ -14,22 +14,33 @@
     .__text {
       margin: 0 auto 0;
       padding: 10px 10px;
-      // display: inline-block;
       backdrop-filter: blur(30px);
       width: 370px;
       border-radius: 20px;
+      border: 0.5px solid orange;
       .__text-animated {
-        // height: 400px;
         font-family: aeonik, monospace;
-        // text-align: center;
         text-align: left;
-        // display: inline-block;
         color: white;
         overflow: hidden;
-        border-right: .15em solid orange;
+        // border-right: .15em solid orange;
         text-wrap: wrap;
         font-size: 1.4rem;
         width: 100%; // Change for 0
+      }
+    }
+  }
+}
+
+@media (max-width: $threshold1) {
+  #About {
+    .__box {
+      .__text {
+        max-width: 300px;
+        // border: 1px solid red;  
+        .__text-animated {
+          font-size: 1rem
+        }
       }
     }
   }
