--- a/src/sass/components/About.scss
+++ b/src/sass/components/About.scss
@@ -10,6 +10,8 @@
     height: 300px;
     width: 100%;
     position: absolute;
+    left: 0;
+    box-sizing: border-box;
     z-index: 1;
     .__text {
       margin: 0 auto 0;
