--- a/src/sass/components/Projects/Projects.scss
+++ b/src/sass/components/Projects/Projects.scss
@@ -1,3 +1,4 @@
+@import '../../helpers/placeholders.scss';
 @import '../../helpers/variables.scss';
 
 #Projects {
@@ -5,14 +6,8 @@
     padding: 48px 0;
     background-color: $black;
     border-bottom: 1px solid $red-logo;
-    // display: flex;
-    justify-content: space-evenly;
     h1 {
-        font-family: roboto;
-        font-size: 40px;
-        text-decoration: underline solid $silver 1px;
-        text-underline-offset: 8px;   
-        color: $red-logo;
+        @extend %titles; 
         display: block;
         text-align: center;
         padding: 24px 48px 90px;
