--- a/src/sass/helpers/placeholders.scss
+++ b/src/sass/helpers/placeholders.scss
@@ -9,3 +9,11 @@
         text-indent: 4px;
     }
 }
+
+%titles {
+    font-family: roboto;
+    font-size: 40px;
+    text-decoration: underline solid $silver 1px;
+    text-underline-offset: 8px;   
+    color: $red-logo;
+}
